    - Fix some ordering issues in old-style package pages and summaries.
    - Add X-$gProject-PR-Message: headers to all mails sent by service.
    - debbugsconfig creates required directories in $gSpoolDir
      (closes: #222077).
    - Decode RFC1522 mail headers for display in the web interface.
      bugreport.cgi and pkgreport.cgi now output UTF-8.

  * Adam Heath:
    - Rewrite filtering in cgi's common.pl, to make it completely generic.
      Filtering can now work against any field.
    - Rewrite grouping logic in cgi's common.pl, to make it completely
      generic.  There is now no longer 2 nested loops, to do the grouping.
      This makes adding new grouping levels simpler for the future.
    - Add in a Table of Contents to pkgreport.cgi.
    - Display how long until a resolved bug will be archived in
      pkgreport.cgi.
    - Add user-agent detection.  This currently doesn't change anything,
      however.
    - Add options show_list_(head|foot)er.

 -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100

debbugs (2.4.1) unstable; urgency=low

  * Colin Watson:
    - Exit the CGI scripts straight away if the HTTP method is HEAD, to save
      pointless work.
    - Display pending+fixed bugs as "fixed in NMU", not "pending upload".
    - Add a man page for debbugsconfig.
    - Report original tags when changing them, closes: #170630.
    - Add missing <ul></ul> tags to db2html's output, closes: #50746.
    - Add a 'submitter' command to service, based on a patch by Matt Kraai.
    - Remove the final use of cgi-lib.pl, so it's gone. Remove copyright
      notices that were there due to using it.
    - Accept ';' as well as '&' as a CGI argument separator.
    - db2html now works with the new hashed database layout.
    - Disable the fixed severity in favour of the tag.
    - MIME-encoded messages to bugs are displayed in decoded form on the web
      interface (unless the "mime=no" parameter is used), closes: #136114.